@@ -1,3 +1,13 @@
+2021-05-20  Devin Rousso  <drousso@apple.com>
+
+        [Modern Media Controls] should not include `TextTrack` when sorting `TextTrackList` if it doesn't have a desired `TextTrack::Kind` when `CaptionDisplayMode::Manual`
+        https://bugs.webkit.org/show_bug.cgi?id=225992
+
+        Reviewed by Eric Carlson.
+
+        * page/CaptionUserPreferencesMediaAF.cpp:
+        (WebCore::CaptionUserPreferencesMediaAF::sortedTrackListForMenu):
+
 2021-05-20  Peng Liu  <peng.liu6@apple.com>
 
         AirPlay icon of the Vimeo.com video player is missing after reloading the page
